# self-documenting-cryptography

./: .gitignore  README.md  TODO.md  dedication.md
design-documents/: bcrypt-notes.md  g3p.md  seguid.md
fixup-golden/: CHANGELOG.md  LICENSE  fixup-golden.cabal
fixup-golden/src/: Main.hs
g3p-hash/: ChangeLog.md  SmokeTest.hs  TODO.md  g3p-hash.cabal  g3p-test-vectors.json
g3p-hash/csrc/: bcrypt.h  bcrypt_raw.c  bcrypt_raw.h  blowfish.c  g3p_blf.h
g3p-hash/lib/Crypto/: G3P.hs
g3p-hash/lib/Crypto/G3P/: BCrypt.hsc
g3p-hash/test/: G3P.hs  Main.hs
phkdf/: ChangeLog.md  phkdf-test-vectors.json  phkdf.cabal
phkdf/lib/Crypto/: PHKDF.hs
phkdf/lib/Crypto/Encoding/: PHKDF.hs
phkdf/lib/Crypto/PHKDF/: HMAC.hs  Primitives.hs  Subtle.hs
phkdf/lib/Crypto/PHKDF/HMAC/: Subtle.hs
phkdf/lib/Crypto/PHKDF/Primitives/: Assert.hs  Subtle.hs
phkdf/test/: HMAC.hs  Main.hs  PHKDF.hs
seguid-protocol/: ChangeLog.md  Tool.hs  seguid-protocol.cabal
seguid-protocol/lib/Crypto/Seguid/: HKDF.hs  Protocol.hs
seguid-protocol/lib/Crypto/Seguid/Protocol/: Constants.hs
seguid-protocol/test/: HKDF.hs  Main.hs  PreinitSalt.hs
tuplehash-utils/: ChangeLog.md  tuplehash-utils.cabal
tuplehash-utils/lib/Crypto/Encoding/SHA3/: TupleHash.hs
